--- a/PulsarTestTask/Views/MainWindow.axaml
+++ b/PulsarTestTask/Views/MainWindow.axaml
@@ -11,13 +11,25 @@
         Title="PulsarTestTask"
 		MinWidth="400" MinHeight="500">
 
-    <Design.DataContext>
+	<Design.DataContext>
         <vm:MainWindowViewModel/>
     </Design.DataContext>
-
+	
 	<DockPanel>
 		<views:NavigationMenuView DataContext="{Binding NavigationVM}" DockPanel.Dock="Left"/>
 		<views:NavigationTitleView DataContext="{Binding NavigationVM}" DockPanel.Dock="Top"/>
-		<views:PageStoreView DockPanel.Dock="Bottom"/>
+		<ContentControl Content="{Binding NavigationVM.SelectedItem.ViewModel}">
+			<ContentControl.DataTemplates>
+				<DataTemplate DataType="{x:Type vm:PageShopVM}">
+					<views:PageShopView/>
+				</DataTemplate>
+				<DataTemplate DataType="{x:Type vm:PageShoppingCartVM}">
+					<views:PageShoppingCartView/>
+				</DataTemplate>
+				<DataTemplate DataType="{x:Type vm:PageProfileVM}">
+					<views:PageProfileView/>
+				</DataTemplate>
+			</ContentControl.DataTemplates>
+		</ContentControl>
 	</DockPanel>
 </Window>
