--- a/PulsarTestTask/Views/PageProfileView.axaml
+++ b/PulsarTestTask/Views/PageProfileView.axaml
@@ -3,7 +3,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="PulsarTestTask.Views.PageProfileView">
+             x:Class="PulsarTestTask.Views.PageProfileView"
+			 xmlns:vm="using:PulsarTestTask.ViewModels"
+			 x:DataType="vm:PageProfileVM">
 	<Border Background="LightGreen" CornerRadius="10">
 		<TextBlock Text="UserProfile" HorizontalAlignment="Center" VerticalAlignment="Center"/>
 	</Border>
