--- a/PulsarTestTask/Views/PageShopView.axaml
+++ b/PulsarTestTask/Views/PageShopView.axaml
@@ -26,12 +26,12 @@
 
 						<StackPanel VerticalAlignment="Bottom" Margin="10">
 							<Image Source="{Binding Bitmap}" MaxHeight="400" MaxWidth="400"/>
-							<StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-								<TextBlock Text="{Binding Name}"/>
-								<TextBlock Text=": "/>
-								<TextBlock Text="{Binding Count}"/>
+							<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="5">
+								<TextBlock Text="{Binding Name}" FontSize="16"/>
+								<TextBlock Text=": " FontSize="16"/>
+								<TextBlock Text="{Binding Count}" FontSize="16"/>
 							</StackPanel>
-							<Button Content="Купить" HorizontalAlignment="Center" BorderBrush="Black"/>
+							<Button Content="Купить" HorizontalAlignment="Center" BorderBrush="Black" FontSize="16"/>
 						</StackPanel>
 					</Border>
 				</DataTemplate>
