--- a/PulsarTestTask/Views/PageProfileView.axaml
+++ b/PulsarTestTask/Views/PageProfileView.axaml
@@ -2,9 +2,57 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+			 xmlns:vm="using:PulsarTestTask.ViewModels"
+			 xmlns:view="using:PulsarTestTask.Views"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="PulsarTestTask.Views.PageProfileView"
-			 xmlns:vm="using:PulsarTestTask.ViewModels"
 			 x:DataType="vm:PageProfileVM">
-	<TextBlock Text="UserProfile" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+	<Design.DataContext>
+		<vm:PageProfileVM/>
+	</Design.DataContext>
+
+	<ScrollViewer>
+		<Grid Margin="20">
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="40*"/>
+				<ColumnDefinition Width="60*"/>
+			</Grid.ColumnDefinitions>
+
+			<StackPanel Grid.Column="1">
+				<StackPanel.Styles>
+					<Style Selector="StackPanel > Border">
+						<Setter Property="Margin" Value="5"/>
+						<Setter Property="BorderBrush" Value="Gray"/>
+						<Setter Property="BorderThickness" Value="1"/>
+						<Setter Property="CornerRadius" Value="10"/>
+						<Setter Property="Padding" Value="5"/>
+						<Setter Property="Background" Value="LightGreen"/>
+					</Style>
+				</StackPanel.Styles>
+
+				<!-- Elements -->
+				<Border>
+					<ItemsControl>
+						<view:ProfileAttributeView DataContext="{Binding UserFirstName}"/>
+						<view:ProfileAttributeView DataContext="{Binding UserSecondName}"/>
+						<view:ProfileAttributeView DataContext="{Binding UserSurname}"/>
+					</ItemsControl>
+				</Border>
+
+				<Border>
+					<ItemsControl>
+						<view:ProfileAttributeView DataContext="{Binding UserPhoneNumber}"/>
+						<view:ProfileAttributeView DataContext="{Binding UserEmail}"/>
+					</ItemsControl>
+				</Border>
+
+				<Border>
+					<ItemsControl>
+						<view:ProfileAttributeView DataContext="{Binding UserAge}"/>
+						<view:ProfileAttributeView DataContext="{Binding UserBalance}"/>
+					</ItemsControl>
+				</Border>
+			</StackPanel>
+		</Grid>
+	</ScrollViewer>
 </UserControl>
